some update css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </ul>
         <div class="product">
             <div class="itemBox mobile"><img src="./media/mobile.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>55</button><button>Mail</button>
                     <h2>This is a Awesome Mobile Phone</h2>
@@ -28,6 +31,9 @@
                 </div>
             </div>
             <div class="itemBox camera"><img src="./media/camera 1.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Camera(nikkon)</h2>
@@ -37,6 +43,9 @@
                 </div>
             </div>
             <div class="itemBox headphone"><img src="./media/headphone 1.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Headphone</h2>
@@ -46,6 +55,9 @@
                 </div>
             </div>
             <div class="itemBox watch"><img src="./media/watch 1.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Watch</h2>
@@ -56,6 +68,9 @@
             </div>
 
             <div class="itemBox mobile"><img src="./media/mobile 2.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>55</button><button>Mail</button>
                     <h2>This is a Awesome Mobile Phone</h2>
@@ -65,6 +80,9 @@
                 </div>
             </div>
             <div class="itemBox camera"><img src="./media/camera 2.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Camera(nikkon)</h2>
@@ -74,6 +92,9 @@
                 </div>
             </div>
             <div class="itemBox headphone"><img src="./media/headphone 2.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Headphone</h2>
@@ -83,6 +104,9 @@
                 </div>
             </div>
             <div class="itemBox watch"><img src="./media/watch 2.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Watch</h2>
@@ -93,6 +117,9 @@
             </div>
 
             <div class="itemBox mobile"><img src="./media/mobile 3.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>55</button><button>Mail</button>
                     <h2>This is a Awesome Mobile Phone</h2>
@@ -102,6 +129,9 @@
                 </div>
             </div>
             <div class="itemBox camera"><img src="./media/camera 3.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Camera(nikkon)</h2>
@@ -111,6 +141,9 @@
                 </div>
             </div>
             <div class="itemBox headphone"><img src="./media/headphone 3.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Headphone</h2>
@@ -120,6 +153,9 @@
                 </div>
             </div>
             <div class="itemBox watch"><img src="./media/watch 3.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Watch</h2>
@@ -130,6 +166,9 @@
             </div>
 
             <div class="itemBox mobile"><img src="./media/mobile 4.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>55</button><button>Mail</button>
                     <h2>This is a Awesome Mobile Phone</h2>
@@ -139,6 +178,9 @@
                 </div>
             </div>
             <div class="itemBox camera"><img src="./media/camera 4.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Camera(nikkon)</h2>
@@ -148,6 +190,9 @@
                 </div>
             </div>
             <div class="itemBox headphone"><img src="./media/headphone 4.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Headphone</h2>
@@ -157,6 +202,9 @@
                 </div>
             </div>
             <div class="itemBox watch"><img src="./media/watch 4.jpg" alt="">
+                <div class="pHover">
+                    <p>Buy Now</p>
+                </div>
                 <div class="detail">
                     <button>80</button><button>Mail</button>
                     <h2>This is a Watch</h2>
